[gd_scene load_steps=29 format=3 uid="uid://cxtrnfx4urloj"]

[ext_resource type="Script" path="res://Scripts/MainCharacter.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c4t5mo1ljrb8d" path="res://MainCharacter/Mesh/MainRig.gltf" id="2"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(0.04, 0.008, 0.0282288)

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(0.0276004, 0.008, 0.0282288)

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(0.0806296, 0.008, 0.0282288)

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(0.156, 0.02, 0.028)

[sub_resource type="BoxShape3D" id="5"]
size = Vector3(0.0267812, 0.008, 0.023017)

[sub_resource type="BoxShape3D" id="6"]
size = Vector3(0.126413, 0.0203464, 0.0306004)

[sub_resource type="BoxShape3D" id="7"]
size = Vector3(0.0820604, 0.0203464, 0.0417232)

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(0.0376366, 0.0203464, 0.034199)

[sub_resource type="BoxShape3D" id="9"]
size = Vector3(0.076863, 0.0203464, 0.0237566)

[sub_resource type="BoxShape3D" id="10"]
size = Vector3(0.158861, 0.067398, 0.0549178)

[sub_resource type="BoxShape3D" id="11"]
size = Vector3(0.208662, 0.056879, 0.058)

[sub_resource type="BoxShape3D" id="12"]
size = Vector3(0.0984376, 0.0213878, 0.0549178)

[sub_resource type="BoxShape3D" id="13"]
size = Vector3(0.182331, 0.0614826, 0.11138)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vlras"]
height = 0.25
radius = 0.05

[sub_resource type="BoxShape3D" id="15"]
size = Vector3(0.302, 0.14, 0.332)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ge06b"]
height = 0.717802
radius = 0.141642

[sub_resource type="BoxShape3D" id="17"]
size = Vector3(0.23998, 0.474798, 0.200428)

[sub_resource type="BoxShape3D" id="18"]
size = Vector3(0.149921, 0.198, 0.472)

[sub_resource type="BoxShape3D" id="19"]
size = Vector3(0.149921, 0.13461, 0.348444)

[sub_resource type="BoxShape3D" id="20"]
size = Vector3(0.525316, 0.217088, 0.236108)

[sub_resource type="BoxShape3D" id="21"]
size = Vector3(0.455964, 0.168765, 0.236108)

[sub_resource type="BoxShape3D" id="22"]
size = Vector3(0.455964, 0.168765, 0.236108)

[sub_resource type="BoxShape3D" id="23"]
size = Vector3(0.193159, 0.071051, 0.236108)

[sub_resource type="SphereMesh" id="24"]

[sub_resource type="QuadMesh" id="25"]

[sub_resource type="GDScript" id="27"]
script/source = "extends Camera3D
var last_position:Vector2
func _ready():
	pass
func _input(event):

	
	if Input.is_action_just_pressed(\"rmb\"):
		last_position = get_viewport().get_mouse_position()
		
	if Input.is_action_pressed(\"rmb\"):
		var delta = get_viewport().get_mouse_position() - last_position
		last_position = get_viewport().get_mouse_position()
		get_parent().rotate_y(-delta.x*0.01)
"

[node name="MainCharacter" instance=ExtResource("2")]
script = ExtResource("1")

[node name="attachHead" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="0"]
transform = Transform3D(0.977482, 0.02366, -0.20969, -0.039927, 0.996482, -0.0736851, 0.207209, 0.0803979, 0.974988, -0.0912905, 1.7416, -0.108971)
bone_name = "head"
bone_idx = 5

[node name="nose_tip" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="0"]
transform = Transform3D(0.997273, 0.000349594, -0.0737957, 0.00512198, 0.99725, 0.0739419, 0.0736186, -0.0741182, 0.994528, -0.00726943, 0.11264, 0.0568623)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/nose_tip" index="0"]
transform = Transform3D(1.00586, -0.00914258, -0.00298337, -0.0010732, 1.14945, -0.890583, 0.00456476, 2.28485, 0.448017, 0.00703045, -0.0281767, 0.0756862)
shape = SubResource("1")

[node name="forehead" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="1"]
transform = Transform3D(0.997273, 0.000349594, -0.0737957, 0.00512198, 0.99725, 0.0739419, 0.0736186, -0.0741182, 0.994528, -0.00726943, 0.11264, 0.0568623)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/forehead" index="0"]
transform = Transform3D(1.00586, -0.0111892, -0.00160611, -0.0010732, 0.311141, -0.989523, 0.00456485, 2.53868, 0.121269, 0.00716671, 0.0240051, 0.0579246)
shape = SubResource("2")

[node name="forehead_top" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="2"]
transform = Transform3D(0.997273, 0.000349594, -0.0737957, 0.00512198, 0.99725, 0.0739419, 0.0736186, -0.0741182, 0.994528, -0.00726943, 0.11264, 0.0568623)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/forehead_top" index="0"]
transform = Transform3D(1.00586, -0.0111893, -0.00160611, -0.00107319, 0.311141, -0.989523, 0.00456493, 2.53868, 0.121269, 0.00685602, 0.0673598, 0.0514053)
shape = SubResource("3")

[node name="forehead_side" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="3"]
transform = Transform3D(0.997273, 0.000349594, -0.0737957, 0.00512198, 0.99725, 0.0739419, 0.0736186, -0.0741182, 0.994528, -0.00726943, 0.11264, 0.0568623)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/forehead_side" index="0"]
transform = Transform3D(1.00586, -0.0111893, -0.00160611, -0.00107318, 0.311141, -0.989523, 0.00456492, 2.53868, 0.121269, 0.00732267, 0.0364027, 0.0264746)
shape = SubResource("4")

[node name="nose_middle" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="4"]
transform = Transform3D(0.997273, 0.000349594, -0.0737957, 0.00512198, 0.99725, 0.0739419, 0.0736186, -0.0741182, 0.994528, -0.00726943, 0.11264, 0.0568623)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/nose_middle" index="0"]
transform = Transform3D(1.00586, -0.00914264, -0.00298338, -0.0010732, 1.14945, -0.890582, 0.00456479, 2.28485, 0.448017, 0.00710668, -0.00449955, 0.0644525)
shape = SubResource("5")

[node name="cheek" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="5"]
transform = Transform3D(1, 3.55271e-15, 0, 0, 1, 1.49012e-08, 0, 0, 0.999999, 0, 0.0985429, 0.101017)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/cheek" index="0"]
transform = Transform3D(1, 0, 1.77636e-14, 0, 0.2632, -0.964741, 0, 0.964742, 0.2632, 1.39698e-09, 0.00344098, 0.00195263)
shape = SubResource("6")

[node name="chin" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="6"]
transform = Transform3D(1, 3.55271e-15, 0, 0, 1, 1.49012e-08, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/chin" index="0"]
transform = Transform3D(1, 7.10543e-14, 7.4607e-14, 0, 0.2632, -0.964741, 0, 0.964742, 0.2632, -2.32831e-09, 0.0137913, 0.126899)
shape = SubResource("7")

[node name="mouth" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="7"]
transform = Transform3D(1, 3.55271e-15, 0, 0, 1, 1.49012e-08, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/mouth" index="0"]
transform = Transform3D(1, 7.10543e-14, 7.4607e-14, 0, 0.2632, -0.964741, 0, 0.964742, 0.2632, -0.00487548, 0.0542034, 0.124311)
shape = SubResource("8")

[node name="mouth_side" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="8"]
transform = Transform3D(1, 3.55271e-15, 0, 0, 1, 1.49012e-08, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/mouth_side" index="0"]
transform = Transform3D(1, 7.10543e-14, 7.4607e-14, 0, 0.2632, -0.964741, 0, 0.964742, 0.2632, -0.00487548, 0.0525439, 0.118228)
shape = SubResource("9")

[node name="jaw" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="9"]
transform = Transform3D(1, 3.55271e-15, 0, 0, 1, 1.49012e-08, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/jaw" index="0"]
transform = Transform3D(1, -4.26326e-14, 4.26326e-14, 0, -0.47234, -0.881416, 0, 0.881417, -0.472339, -0.00487548, 0.0412941, 0.0609957)
shape = SubResource("10")

[node name="ears" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="10"]
transform = Transform3D(1, 3.55271e-15, 0, 0, 1, 1.49012e-08, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/ears" index="0"]
transform = Transform3D(1, -8.88178e-15, 0, 0, -0.997788, -0.066481, 0, 0.0664811, -0.997787, -0.00487547, 0.0979023, 0.00500514)
shape = SubResource("11")

[node name="eyes" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="11"]
transform = Transform3D(1, 3.55271e-15, 0, 0, 1, 1.49012e-08, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/eyes" index="0"]
transform = Transform3D(1, -2.66454e-14, 0, 0, -0.997788, -0.066481, 0, 0.0664811, -0.997787, -0.00487547, 0.126675, 0.0818985)
shape = SubResource("12")

[node name="head_shape" type="StaticBody3D" parent="MainRig/Skeleton3D/attachHead" index="12"]
transform = Transform3D(1, 0, -1.42109e-14, -3.55271e-15, 1, 1.49012e-08, 0, 1.49012e-08, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/attachHead/head_shape" index="0"]
transform = Transform3D(1, -5.32907e-15, 0, 0, -0.997788, -0.066481, 0, 0.0664811, -0.997787, -0.00487547, 0.159426, -0.00867783)
shape = SubResource("13")

[node name="upper_arm_R" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="1"]
transform = Transform3D(-0.811304, -0.53885, -0.226772, 0.529886, -0.841647, 0.104168, -0.246993, -0.0356512, 0.968361, -0.293524, 1.56337, -0.190987)
bone_name = "upper_arm_R"
bone_idx = 25

[node name="upper" type="StaticBody3D" parent="MainRig/Skeleton3D/upper_arm_R" index="0"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/upper_arm_R/upper" index="0"]
transform = Transform3D(1, -8.56817e-08, 2.98023e-08, 3.44589e-08, 1, 1.86265e-08, 0, 1.11759e-08, 1, 0, 0.135, 0)
shape = SubResource("CylinderShape3D_vlras")

[node name="upper_arm_L" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="2"]
transform = Transform3D(-0.751153, 0.651247, -0.107915, -0.660126, -0.741433, 0.120459, -0.00156315, 0.16172, 0.986835, 0.109119, 1.59462, -0.126918)
bone_name = "upper_arm_L"
bone_idx = 7

[node name="upper" type="StaticBody3D" parent="MainRig/Skeleton3D/upper_arm_L" index="0"]
transform = Transform3D(0.492201, -0.796476, 0.351232, 0.87047, 0.452339, -0.194089, -0.00428925, 0.40127, 0.915949, -0.0103523, -0.315554, 0.149598)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/upper_arm_L/upper" index="0"]
transform = Transform3D(0.853451, 0.0915082, 0.182172, 0.43378, 0.420981, -0.282846, -0.288894, 0.902447, 0.113472, 0.410682, 0.14131, -0.227492)
shape = SubResource("15")

[node name="forearm_R" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="3"]
transform = Transform3D(-0.780034, -0.590925, 0.205803, 0.578826, -0.556465, 0.596077, -0.237714, 0.584085, 0.776104, -0.440071, 1.33447, -0.200682)
bone_name = "forearm_R"
bone_idx = 26

[node name="forearm" type="StaticBody3D" parent="MainRig/Skeleton3D/forearm_R" index="0"]
transform = Transform3D(-0.804043, -0.541281, 0.246023, 0.457606, -0.299175, 0.83731, -0.379616, 0.785818, 0.488244, 0.0239874, -0.369048, 0.503698)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/forearm_R/forearm" index="0"]
transform = Transform3D(0.527154, -0.8291, 0.0661528, -0.311983, -0.392773, -0.307159, 0.790433, 0.397915, -0.165354, 0.443898, -0.554337, 0.173929)
shape = SubResource("15")

[node name="forearm_L" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="4"]
transform = Transform3D(-0.711086, 0.459841, -0.531886, -0.703104, -0.464007, 0.538834, 0.000979028, 0.757128, 0.653265, 0.286234, 1.39297, -0.0829358)
bone_name = "forearm_L"
bone_idx = 8

[node name="forearm" type="StaticBody3D" parent="MainRig/Skeleton3D/forearm_L" index="0"]
transform = Transform3D(-0.804043, -0.541281, 0.246023, 0.457606, -0.299175, 0.83731, -0.379616, 0.785818, 0.488244, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/forearm_L/forearm" index="0"]
transform = Transform3D(0.731672, 0.337375, -0.592313, -0.440103, -0.429749, -0.788432, -0.520543, 0.837553, -0.165956, 0, 0, 0)
shape = SubResource("CylinderShape3D_ge06b")

[node name="thigh_L" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="5"]
transform = Transform3D(0.970802, 0.124363, 0.205128, 0.136046, -0.989733, -0.0438148, 0.197573, 0.0704425, -0.977753, 0.0021046, 1.0685, -0.111836)
bone_name = "thigh_L"
bone_idx = 42

[node name="thigh" type="StaticBody3D" parent="MainRig/Skeleton3D/thigh_L" index="0"]
transform = Transform3D(0.999998, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/thigh_L/thigh" index="0"]
transform = Transform3D(1, -2.24099e-08, -2.32831e-09, -6.77246e-08, 1, -9.31323e-09, -3.25963e-09, -1.49012e-08, 1, 0.017344, 0.222048, -0.0117421)
shape = SubResource("17")

[node name="thigh_R" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="6"]
transform = Transform3D(0.966433, -0.177226, 0.186005, -0.172104, -0.98412, -0.0434589, 0.190753, 0.00998801, -0.981587, -0.190041, 1.07208, -0.150352)
bone_name = "thigh_R"
bone_idx = 47

[node name="thigh" type="StaticBody3D" parent="MainRig/Skeleton3D/thigh_R" index="0"]
transform = Transform3D(0.999998, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/thigh_R/thigh" index="0"]
transform = Transform3D(1, -2.24099e-08, -2.32831e-09, -6.77246e-08, 1, -9.31323e-09, -3.25963e-09, -1.49012e-08, 1, 0.017344, 0.222048, -0.0117421)
shape = SubResource("17")

[node name="shin_R" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="7"]
transform = Transform3D(0.975158, -0.11017, 0.192169, -0.118971, -0.992286, 0.0348405, 0.186848, -0.0568374, -0.980743, -0.285016, 0.54469, -0.145)
bone_name = "shin_R"
bone_idx = 48

[node name="shin" type="StaticBody3D" parent="MainRig/Skeleton3D/shin_R" index="0"]
transform = Transform3D(0.999998, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/shin_R/shin" index="0"]
transform = Transform3D(0.165207, -0.986226, -0.00822364, 0.097966, 0.0247046, -0.994882, 0.981382, 0.163557, 0.1007, -0.0122064, 0.210806, 0.00333779)
shape = SubResource("18")

[node name="shin_L" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="8"]
transform = Transform3D(0.975442, 0.0879868, 0.20192, 0.0826644, -0.995975, 0.034659, 0.204157, -0.0171161, -0.978788, 0.0687508, 0.538106, -0.0740861)
bone_name = "shin_L"
bone_idx = 43

[node name="shin" type="StaticBody3D" parent="MainRig/Skeleton3D/shin_L" index="0"]
transform = Transform3D(0.999998, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/shin_L/shin" index="0"]
transform = Transform3D(0.165207, -0.986226, -0.00822364, 0.097966, 0.0247046, -0.994882, 0.981382, 0.163557, 0.1007, -0.0122064, 0.210806, 0.00333779)
shape = SubResource("18")

[node name="foot_R" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="9"]
transform = Transform3D(0.997686, 0.0320369, -0.0599664, -0.0304117, -0.578564, -0.81507, -0.0608064, 0.815007, -0.57625, -0.331717, 0.124059, -0.169093)
bone_name = "foot_R"
bone_idx = 49

[node name="foot" type="StaticBody3D" parent="MainRig/Skeleton3D/foot_R" index="0"]
transform = Transform3D(0.999998, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/foot_R/foot" index="0"]
transform = Transform3D(-0.0299073, -0.999555, 0.0004985, 0.56846, -0.0174207, -0.822526, 0.822169, -0.024314, 0.568727, -0.00278719, 0.114151, -0.0108158)
shape = SubResource("19")

[node name="foot_L" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="10"]
transform = Transform3D(0.981188, -0.164972, 0.10027, -0.012355, -0.571983, -0.820172, 0.192658, 0.803504, -0.563261, 0.106048, 0.115911, -0.0813416)
bone_name = "foot_L"
bone_idx = 44

[node name="foot" type="StaticBody3D" parent="MainRig/Skeleton3D/foot_L" index="0"]
transform = Transform3D(0.999998, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/foot_L/foot" index="0"]
transform = Transform3D(-0.0299073, -0.999555, 0.0004985, 0.56846, -0.0174207, -0.822526, 0.822169, -0.024314, 0.568727, -0.00278719, 0.114151, -0.0108158)
shape = SubResource("19")

[node name="spine_3" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="11"]
transform = Transform3D(0.991198, -0.011112, -0.131919, 0.0274364, 0.992079, 0.122583, 0.129512, -0.125123, 0.983652, -0.098411, 1.46003, -0.113529)
bone_name = "spine3"
bone_idx = 3

[node name="spine_3" type="StaticBody3D" parent="MainRig/Skeleton3D/spine_3" index="0"]
transform = Transform3D(1, 0, 1.42109e-14, -7.10543e-15, 1, 0, 5.68434e-14, 0, 1, 5.45374e-09, 0.17626, 0.0228746)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/spine_3/spine_3" index="0"]
transform = Transform3D(1, 1.06581e-14, 0, -2.13163e-14, 1, -4.47035e-08, 1.7053e-13, 4.47035e-08, 1, -1.82872e-08, -0.0851667, -0.0272159)
shape = SubResource("20")

[node name="spine_1" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="12"]
transform = Transform3D(0.984037, 0.0162372, -0.177224, -0.0479453, 0.983197, -0.176136, 0.171386, 0.181821, 0.968281, -0.0940178, 1.15805, -0.122697)
bone_name = "spine1"
bone_idx = 1

[node name="spine_1" type="StaticBody3D" parent="MainRig/Skeleton3D/spine_1" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/spine_1/spine_1" index="0"]
transform = Transform3D(1, 0, 0, -4.23516e-22, 1, 0, 0, 0, 1, 6.04032e-16, 0.0520034, -0.0143324)
shape = SubResource("21")

[node name="spine_2" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="13"]
transform = Transform3D(0.982338, -0.0395927, -0.182879, 0.056114, 0.994708, 0.086066, 0.178504, -0.0948081, 0.979361, -0.0917813, 1.29347, -0.0976539)
bone_name = "spine2"
bone_idx = 2

[node name="spine_2" type="StaticBody3D" parent="MainRig/Skeleton3D/spine_2" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/spine_2/spine_2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.62125e-10, 0.0788308, -0.00591374)
shape = SubResource("22")

[node name="fullHead" type="BoneAttachment3D" parent="MainRig/Skeleton3D" index="14"]
transform = Transform3D(0.980039, 0.119387, -0.158966, -0.171306, 0.912891, -0.370518, 0.100883, 0.390354, 0.915121, -0.100754, 1.66924, -0.139914)
bone_name = "neck"
bone_idx = 4

[node name="fullHead" type="StaticBody3D" parent="MainRig/Skeleton3D/fullHead" index="0"]
transform = Transform3D(0.99676, -0.0669551, 0.0445777, 0.0662775, 0.997665, 0.0165118, -0.0455792, -0.0135036, 0.998869, -0.00347762, -0.00175285, 0.000184536)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainRig/Skeleton3D/fullHead/fullHead" index="0"]
transform = Transform3D(0.99879, -0.0452682, -0.0192165, 0.049175, 0.923702, 0.379945, 0.000550913, -0.38043, 0.92481, 0.00368766, 0.0125387, -0.00955909)
shape = SubResource("23")

[node name="MouseTarget" type="MeshInstance3D" parent="." index="1"]
transform = Transform3D(0.00694742, 0, 0, 0, 0.00694742, 0, 0, 0, 0.00694742, 0, 0, 0)
top_level = true
mesh = SubResource("24")

[node name="blinkTimer" type="Timer" parent="." index="2"]
wait_time = 2.0
autostart = true

[node name="blinkAnim" type="Timer" parent="." index="3"]
wait_time = 0.05

[node name="headGrab" type="MeshInstance3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81041, -0.302412)
mesh = SubResource("25")

[node name="faceViewport" type="SubViewport" parent="." index="5"]
size = Vector2i(64, 64)

[node name="faceCam" type="Camera3D" parent="faceViewport" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000900328, 1.85833, 0.56002)
visible = false
fov = 35.0

[node name="camTarget" type="Node3D" parent="." index="6"]

[node name="Camera3D" type="Camera3D" parent="camTarget" index="0"]
transform = Transform3D(-1, 3.55271e-15, -8.74228e-08, -3.3475e-08, 0.923786, 0.382909, 8.07599e-08, 0.382909, -0.923786, 0, 2.42, -2.65562)
visible = false
script = SubResource("27")

[connection signal="timeout" from="blinkTimer" to="." method="_on_blinkTimer_timeout"]
[connection signal="timeout" from="blinkAnim" to="." method="_on_blinkAnim_timeout"]
